--- a/web/circularlabs/hugo.toml
+++ b/web/circularlabs/hugo.toml
@@ -36,6 +36,10 @@ url = 'http://www.circularlabs.com/forum'
 title = "Community"
 
 [[params.menu.main]]
+url = '/subscribe'
+title = "Subscribe"
+
+[[params.menu.main]]
 url = '/about/'
 title = "About"
 
