web site adjustments

--- a/web/circularlabs/hugo.toml
+++ b/web/circularlabs/hugo.toml
@@ -45,11 +45,11 @@ title = "About"
 enable = true
 title = 'Welcome to the new Mobius'
 body = '''
-Mobius 3 is available as an early beta release for 64-bit Windows and Mac computers.
+Mobius 3 is available as an early release for 64-bit Windows and Mac computers.
 It runs as both a standalone application and as a VST3 and AudioUnit plugin.
-While most of the functionality of the original Mobius has been preserved, it has been extensively redesigned and will not be stable for awhile.
-You are welcome to try it and report any problems you may encounter, but it is not recommended for serious use.
-If you are new to Mobius, this may not be the best time to become involved. If you are an experienced user that would like to test the new version, please create a forum account.
-The forum can be accessed from the **Community** item in the main menu.  There is also an active [Mobius Group](https://www.facebook.com/groups/mobiuscentral) on Facebook.
+While most of the functionality of the original Mobius has been preserved, it has been extensively
+redesigned and many new features have been added.  If you are new to Mobius, the documentation is incomplete and this may not be the best time to learn.  Please join the forum for support.  
+
+The forum can be accessed from the [Community](forum/public) item in the main menu.  There is also an active [Mobius Group](https://www.facebook.com/groups/mobiuscentral) on Facebook.
 '''
 
